--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -102,6 +102,10 @@
             font-size: 11pt;
             padding: 5px;
         }
+        .table-bordered {
+            border-top-right-radius: 15px;
+            border-top-left-radius: 15px;
+        }
     </style>
 </head>
 <body>
