Üretim kaydı tablo eklendi

--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -347,8 +347,35 @@
                     </div>
                 </div>
                 <div class="row" style="min-height:33%;display:none" id="tablo">
-                    <div class="col" id="stokadlari">
+                    <div class="col-sm-10" id="stokadlari">
 
+                    </div>
+
+                    <div class="col">
+                        <div class="table-responsive">
+                            <table id="UretimListeTable"
+                                   class="table"
+                                   data-show-refresh="false"
+                                   data-show-toggle="false"
+                                   data-show-fullscreen="false"
+                                   data-show-columns="false"
+                                   data-show-columns-toggle-all="false"
+                                   data-detail-view="false"
+                                   data-detail-view-by-click="false"
+                                   data-show-export="false"
+                                   data-click-to-select="false"
+                                   data-show-pagination-switch="false"
+                                   data-pagination="false"
+                                   data-show-footer="false"
+                                   data-mobile-responsive="true"
+                                   data-locale="tr-TR">
+                                <thead>
+                                    <tr>
+                                        <th data-formatter="oranFormatter4" data-field="ORAN" data-halign="center" data-align="center">ORAN</th>
+                                    </tr>
+                                </thead>
+                            </table>
+                        </div>
                     </div>
                 </div>
                 <div class="row" style="min-height:33%;display:none" id="BekleyenIsEmirleriTablo">
@@ -408,38 +435,39 @@
                     </div>
                 </div>
                 <div class="row" style="min-height:33%;display:none" id="UretimeGirenlerTablo">
-                    <div class="table-responsive">
-                        <table id="UretimeGirenlerTable"
-                               class="table"
-                               data-search="true"
-                               data-show-refresh="false"
-                               data-show-toggle="false"
-                               data-show-fullscreen="false"
-                               data-show-columns="false"
-                               data-show-columns-toggle-all="false"
-                               data-detail-view="false"
-                               data-detail-view-by-click="false"
-                               data-show-export="false"
-                               data-click-to-select="true"
-                               data-show-pagination-switch="false"
-                               data-pagination="false"
-                               data-id-field="id"
-                               data-show-footer="false"
-                               data-mobile-responsive="true"
-                               data-pagination-parts="['pageSize', 'pageInfo', 'pageList']"
-                               data-locale="tr-TR">
-                            <thead>
-                                <tr>
-                                    <th data-formatter="oranFormatter3" data-width="50" data-field="ORAN" data-halign="center" data-align="center">%</th>
-                                    <th data-field="SERI_NO" data-halign="center" data-align="center">SERI_NO</th>
-                                    <th data-formatter="intFormatter" data-field="SERI_MIKTAR" data-halign="center" data-align="center">SERI_MIKTAR</th>
-                                    <th data-formatter="intFormatter" data-field="URETILEN" data-halign="center" data-align="center">URETILEN</th>
-                                    <th data-formatter="intFormatter" data-field="SERI_BAKIYE" data-halign="center" data-align="center">SERI_BAKIYE</th>
-                                    <th data-formatter="oranFormatter2" data-field="ORAN" data-halign="center" data-align="center">ORAN</th>
-                                </tr>
-                            </thead>
-                        </table>
-                    </div>
+                        <div class="table-responsive">
+                            <table id="UretimeGirenlerTable"
+                                   class="table"
+                                   data-search="true"
+                                   data-show-refresh="false"
+                                   data-show-toggle="false"
+                                   data-show-fullscreen="false"
+                                   data-show-columns="false"
+                                   data-show-columns-toggle-all="false"
+                                   data-detail-view="false"
+                                   data-detail-view-by-click="false"
+                                   data-show-export="false"
+                                   data-click-to-select="true"
+                                   data-show-pagination-switch="false"
+                                   data-pagination="false"
+                                   data-id-field="id"
+                                   data-show-footer="false"
+                                   data-mobile-responsive="true"
+                                   data-pagination-parts="['pageSize', 'pageInfo', 'pageList']"
+                                   data-locale="tr-TR">
+                                <thead>
+                                    <tr>
+                                        <th data-formatter="oranFormatter3" data-width="50" data-field="ORAN" data-halign="center" data-align="center">%</th>
+                                        <th data-field="SERI_NO" data-halign="center" data-align="center">SERI_NO</th>
+                                        <th data-formatter="intFormatter" data-field="SERI_MIKTAR" data-halign="center" data-align="center">SERI_MIKTAR</th>
+                                        <th data-formatter="intFormatter" data-field="URETILEN" data-halign="center" data-align="center">URETILEN</th>
+                                        <th data-formatter="intFormatter" data-field="SERI_BAKIYE" data-halign="center" data-align="center">SERI_BAKIYE</th>
+                                        <th data-formatter="oranFormatter2" data-field="ORAN" data-halign="center" data-align="center">ORAN</th>
+                                    </tr>
+                                </thead>
+                            </table>
+                        </div>
+                    
                 </div>
                 <div class="row" style="margin-top:-5%;min-height:33%;display:none" id="scanner">
                     <div id="element">
@@ -980,7 +1008,7 @@
                 {
                     $('#UretimeGirenlerTable').bootstrapTable('destroy');
                     $('#UretimeGirenlerTable').bootstrapTable({ data: response });
-
+                    
                     $('#UretimeGirenlerTablo').show();
                 }
             });
@@ -999,6 +1027,45 @@
         {
             return '<p class="meter mt-1" style="width: 4.1rem;transform: rotate(270deg);margin: 0 !important;"><span style="width:' + parseFloat(value) + '%;height: 1.5rem;"><span class="progress custom-progress"  style="height: 100%;border-radius: 0 !important;    background-color: #07e655;"></span></span></p>';
         }
+
+        function oranFormatter4(value, index, row) {
+            return '<p class="meter" style="height: auto;position: relative; border: 1px solid #d9dee3; border-radius: 8px; margin: 0 0.25rem;"><span style="width:' + parseFloat(value) + '%;"><span class="progress custom-progress" id="progress-msip" style=" height: 1.5rem; display:flex;align-items:center;"><span style="height:auto; color: black;font-size: small;position: absolute; right: 0; left: 0; top: 0; bottom: 0;">' + index.SERI_NO + '</span></span></span></p>';
+        }
+
+        var YedekList = [];
+
+        function UretimListe()
+        {
+            $.ajax({
+                url: `http://192.168.2.13:83/api/ie/hatgirdi`,
+                type: 'GET',
+                success: (response) => {
+                    if (JSON.stringify(response) !== JSON.stringify(YedekList))
+                    {
+                        $('#UretimListeTable').bootstrapTable('destroy');
+                        $('#UretimListeTable').bootstrapTable({ data: response });
+
+                        YedekList = response;
+                    }
+                }
+            }).then(() => {
+                var ScrollHeight = $('#UretimListeTable').find('tbody')[0].scrollHeight;
+
+                if (ScrollHeight > 400)
+                {
+                    $('#UretimListeTable').find('tbody')[0].scrollTo(0, ScrollHeight);
+                }
+            });
+        }
+
+        //Belirli aralık ile veri çekme işlemi
+        function UretimListeCek()
+        {
+            setInterval(() =>
+            {
+                UretimListe();
+            }, 1000);
+        }
     </script>
 
     <style>
@@ -1008,6 +1075,45 @@
 
         #UretimeGirenlerTable td:nth-child(1) {
             padding: 0.1rem 0 !important;
+        }
+
+        #UretimListeTable > :not(caption) > * > * {
+            padding: 0.15rem 0 !important;
+        }
+
+        #UretimListeTable tbody {
+            display: block;
+            max-height: 400px;
+            overflow-y: auto;
+        }
+
+            #UretimListeTable tbody tr, #UretimListeTable thead {
+                display: table;
+                table-layout: fixed;
+                width: 100%;
+            }
+
+        #UretimListeTable tr {
+            border-top-width: 0;
+            border-bottom-width: 0;
+        }
+            #UretimListeTable tr th {
+                border-top-width: 1px;
+            }
+
+            #UretimListeTable tr td {
+                border-width: 1px;
+                border-top-width: 0;
+                border-bottom-width: 0;
+            }
+
+            #UretimListeTable tr:last-child > td {
+                border-width: 1px;
+                border-top-width: 0;
+            }
+
+        #UretimListeTable td {
+            border-width: 0;
         }
     </style>
 
@@ -1134,6 +1240,8 @@
                 $('#UretimeGirenlerMakineMobil').hide();
                 $('#UretimeGirenlerMakine').hide();
                 $('#UretimeGirenlerTablo').hide();
+
+                UretimListe();
 
                 if ($(window).width() < 800) {
                     $("#makmobile1").show();
