--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -251,6 +251,25 @@
             width: 15px;
             height: 15px;
         }
+
+
+        @@media screen and (max-height:800px) {
+            #stokadlari {
+                height: 540px;
+            }
+        }
+
+        @@media screen and (min-height:801px) and (max-height:1149px) {
+            #stokadlari {
+                height: 630px;
+            }
+        }
+
+        @@media screen and (min-height:1150px) {
+            #stokadlari {
+                height: 945px;
+            }
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
@@ -301,9 +320,7 @@
                 <div class="row mt-4" style="max-width:100vw">
                     <div class="col">
                         <div id="BekleyenIsEmirleriMakine" style="max-width:50vw;display:none;"> </div>
-                        <div id="BekleyenIsEmirleriMakineMobil" style="max-width:50vw;display:none;"> </div>
                         <div id="UretimeGirenlerMakine" style="max-width:50vw;display:none;"> </div>
-                        <div id="UretimeGirenlerMakineMobil" style="max-width:50vw;display:none;"> </div>
                         <div class="btn-group" role="group" aria-label="Basic radio toggle button group" id="makineler">
 
                         </div>
@@ -329,7 +346,7 @@
                         <button type="button" class="btn btn-outline-primary" onclick="SeciliIsEmirleriniKapat()">SEÇİLİ İŞ EMİRLERİNİ KAPAT</button>
                     </div>
                 </div>
-                <div class="row" id="makmobile1" style="min-height:11%; max-width:100vw">
+                <div class="row" id="makmobile1" style="max-width:100vw">
                     <div class="col">
 
                         <div class="btn-group" role="group" aria-label="Basic radio toggle button group" id="makineler2" style="display:none">
@@ -338,7 +355,7 @@
 
                     </div>
                 </div>
-                <div class="row" id="makmobile2" style="min-height:11%; max-width:100vw">
+                <div class="row my-3" id="makmobile2" style="max-width:100vw">
                     <div class="col">
 
                         <div class="btn-group" role="group" aria-label="Basic radio toggle button group" id="makineler3" style="display:none">
@@ -347,35 +364,33 @@
                     </div>
                 </div>
                 <div class="row" style="min-height:33%;display:none" id="tablo">
-                    <div class="col-sm-10" id="stokadlari">
+                    <div class="col" style="overflow-y: auto; border: 1px solid #d9dee3; padding: 10px; display: grid; grid-template-rows: repeat(auto-fill, minmax(130px, 1fr)); grid-gap: 10px; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); " id="stokadlari">
 
                     </div>
 
-                    <div class="col">
-                        <div class="table-responsive">
-                            <table id="UretimListeTable"
-                                   class="table"
-                                   data-show-refresh="false"
-                                   data-show-toggle="false"
-                                   data-show-fullscreen="false"
-                                   data-show-columns="false"
-                                   data-show-columns-toggle-all="false"
-                                   data-detail-view="false"
-                                   data-detail-view-by-click="false"
-                                   data-show-export="false"
-                                   data-click-to-select="false"
-                                   data-show-pagination-switch="false"
-                                   data-pagination="false"
-                                   data-show-footer="false"
-                                   data-mobile-responsive="true"
-                                   data-locale="tr-TR">
-                                <thead>
-                                    <tr>
-                                        <th data-formatter="oranFormatter4" data-field="ORAN" data-halign="center" data-align="center">ORAN</th>
-                                    </tr>
-                                </thead>
-                            </table>
-                        </div>
+                    <div class="col-sm-auto">
+                        <table id="UretimListeTable"
+                                class="table"
+                                data-show-refresh="false"
+                                data-show-toggle="false"
+                                data-show-fullscreen="false"
+                                data-show-columns="false"
+                                data-show-columns-toggle-all="false"
+                                data-detail-view="false"
+                                data-detail-view-by-click="false"
+                                data-show-export="false"
+                                data-click-to-select="false"
+                                data-show-pagination-switch="false"
+                                data-pagination="false"
+                                data-show-footer="false"
+                                data-mobile-responsive="false"
+                                data-locale="tr-TR">
+                            <thead>
+                                <tr>
+                                    <th data-formatter="oranFormatter4" data-field="ORAN" data-halign="center" data-align="center">ORAN</th>
+                                </tr>
+                            </thead>
+                        </table>
                     </div>
                 </div>
                 <div class="row" style="min-height:33%;display:none" id="BekleyenIsEmirleriTablo">
@@ -512,21 +527,13 @@
 
         function MakineListele() {
             $.getJSON("http://192.168.2.13:83/api/makine/makineler", (data) => {
-                var Makineler = `<div class="btn-group" role="group" aria-label="Basic radio toggle button group">`;
-                var MakinelerMobil = `<div class="btn-group " role="group" aria-label="Basic radio toggle button group">`;
+                var Makineler = `<div class="btn-group" style="grid-template-columns: repeat( auto-fit, minmax(80px, 1fr) );display:grid;grid-gap: 0.25rem 0;" role="group" aria-label="Basic radio toggle button group">`;
 
                 for (var i = 0; i < data.length; i++) {
                     Makineler += `<input type="radio" class="btn-check" name="makine-ie" id="${data[i].HAT_KODU}" onclick="MakineBekleyenIsEmri(this.value)" value="${data[i].HAT_KODU}" autocomplete="off"><label class="btn btn-outline-primary" for="${data[i].HAT_KODU}">${data[i].HAT_KODU}</label>`;
-
-                    if (i % 4 == 0 && i != 0) {
-                        MakinelerMobil += `</div><div class="btn-group mt-4" role="group" aria-label="Basic radio toggle button group">`;
-                    }
-
-                    MakinelerMobil += `<input type="radio" class="btn-check" name="makine-ie" id="${data[i].HAT_KODU}" onclick="MakineBekleyenIsEmri(this.value)" value="${data[i].HAT_KODU}" autocomplete="off"><label class="btn btn-outline-primary" for="${data[i].HAT_KODU}">${data[i].HAT_KODU}</label>`;
                 }
 
                 $('#BekleyenIsEmirleriMakine').html(Makineler + `</div>`);
-                $('#BekleyenIsEmirleriMakineMobil').html(MakinelerMobil + `</div>`);
             });
         }
 
@@ -981,21 +988,13 @@
     <script>
         function UretimeGirenlerMakineListele() {
             $.getJSON("http://192.168.2.13:83/api/makine/makineler", (data) => {
-                var Makineler = `<div class="btn-group" role="group" aria-label="Basic radio toggle button group">`;
-                var MakinelerMobil = `<div class="btn-group " role="group" aria-label="Basic radio toggle button group">`;
+                var Makineler = `<div class="btn-group" style="grid-template-columns: repeat( auto-fit, minmax(80px, 1fr) );display:grid;grid-gap: 0.25rem 0;" role="group" aria-label="Basic radio toggle button group">`;
 
                 for (var i = 0; i < data.length; i++) {
                     Makineler += `<input type="radio" class="btn-check" name="makine-ie" id="${data[i].HAT_KODU}" onclick="UretimeGirenler(this.value)" value="${data[i].HAT_KODU}" autocomplete="off"><label class="btn btn-outline-primary" for="${data[i].HAT_KODU}">${data[i].HAT_KODU}</label>`;
-
-                    if (i % 4 == 0 && i != 0) {
-                        MakinelerMobil += `</div><div class="btn-group mt-4" role="group" aria-label="Basic radio toggle button group">`;
-                    }
-
-                    MakinelerMobil += `<input type="radio" class="btn-check" name="makine-ie" id="${data[i].HAT_KODU}" onclick="UretimeGirenler(this.value)" value="${data[i].HAT_KODU}" autocomplete="off"><label class="btn btn-outline-primary" for="${data[i].HAT_KODU}">${data[i].HAT_KODU}</label>`;
                 }
 
                 $('#UretimeGirenlerMakine').html(Makineler + `</div>`);
-                $('#UretimeGirenlerMakineMobil').html(MakinelerMobil + `</div>`);
             });
         }
 
@@ -1029,10 +1028,10 @@
         }
 
         function oranFormatter4(value, index, row) {
-            return '<p class="meter" style="height: auto;position: relative; border: 1px solid #d9dee3; border-radius: 8px; margin: 0 0.25rem;"><span style="width:' + parseFloat(value) + '%;"><span class="progress custom-progress" id="progress-msip" style=" height: 1.5rem; display:flex;align-items:center;"><span style="height:auto; color: black;font-size: small;position: absolute; right: 0; left: 0; top: 0; bottom: 0;">' + index.SERI_NO + '</span></span></span></p>';
+            return '<div  data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<span>' + index.SERI_NO + '</span>"><p class="meter" style="height: auto;position: relative; border: 1px solid #d9dee3; border-radius: 8px; margin: 0 0.25rem;"><span style="width:' + parseFloat(value) + '%;"><span class="progress custom-progress" id="progress-msip" style=" height: 1.5rem; display:flex;align-items:center;"><span style="height:auto; color: black;font-size: small;position: absolute; right: 0; left: 0; top: 0; bottom: 0;">' + index.SERI_NO + '</span></span></span></p></div>';
         }
 
-        var YedekList = [];
+        var UretimListeYedek = [];
 
         function UretimListe()
         {
@@ -1040,13 +1039,15 @@
                 url: `http://192.168.2.13:83/api/ie/hatgirdi`,
                 type: 'GET',
                 success: (response) => {
-                    if (JSON.stringify(response) !== JSON.stringify(YedekList))
+                    if (JSON.stringify(response) !== JSON.stringify(UretimListeYedek))
                     {
-                        $('#UretimListeTable').bootstrapTable('destroy');
-                        $('#UretimListeTable').bootstrapTable({ data: response });
-
-                        YedekList = response;
+                        UretimListeYedek = response;
                     }
+
+                    $('#UretimListeTable').bootstrapTable('destroy');
+                    $('#UretimListeTable').bootstrapTable({ data: UretimListeYedek });
+
+                    
                 }
             }).then(() => {
                 var ScrollHeight = $('#UretimListeTable').find('tbody')[0].scrollHeight;
@@ -1079,6 +1080,10 @@
 
         #UretimListeTable > :not(caption) > * > * {
             padding: 0.15rem 0 !important;
+        }
+
+        #UretimListeTable{
+            width:170px;
         }
 
         #UretimListeTable tbody {
@@ -1235,9 +1240,7 @@
                 $('#BarkodButton').hide();
                 $('#BekleyenIsEmirleriMakine').hide();
                 $('#BekleyenIsEmirleriTablo').hide();
-                $('#BekleyenIsEmirleriMakineMobil').hide();
                 $('.iefiltre').hide();
-                $('#UretimeGirenlerMakineMobil').hide();
                 $('#UretimeGirenlerMakine').hide();
                 $('#UretimeGirenlerTablo').hide();
 
@@ -1283,11 +1286,11 @@
                 $('#BarkodButton').show();
                 $('#BekleyenIsEmirleriMakine').hide();
                 $('#BekleyenIsEmirleriTablo').hide();
-                $('#BekleyenIsEmirleriMakineMobil').hide();
-                $('#UretimeGirenlerMakineMobil').hide();
                 $('#UretimeGirenlerMakine').hide();
                 $('#UretimeGirenlerTablo').hide();
                 $('.iefiltre').hide();
+
+                UretimListeYedek = [];
 
                 $("input:radio[name=makine-ie]").prop('checked', false);
                         function docReady(fn) {
@@ -1370,7 +1373,6 @@
                 $('#BarkodButton').hide();
                 $('.iefiltre').hide();
 
-                $('#UretimeGirenlerMakineMobil').hide();
                 $('#UretimeGirenlerMakine').hide();
                 $('#UretimeGirenlerTablo').hide();
 
@@ -1379,16 +1381,10 @@
                 $("input:radio[name=makine-status-ie][value='open']").prop('checked', true);
                 $("input[type=radio][name=makine-status-ie][value='open']").prop('checked', true);
 
-                if ($(window).width() < 800)
-                {
-                    $('#BekleyenIsEmirleriMakineMobil').show();
-                    $('#BekleyenIsEmirleriMakine').hide();
-                }
-                else
-                {
-                    $('#BekleyenIsEmirleriMakineMobil').hide();
-                    $('#BekleyenIsEmirleriMakine').show();
-                }
+                UretimListeYedek = [];
+
+                $('#BekleyenIsEmirleriMakine').show();
+
                 if (html5QrcodeScanner != null) {
                     html5QrcodeScanner.clear();
                 }
@@ -1411,20 +1407,14 @@
 
 
                 $('#BekleyenIsEmirleriMakine').html('');
-                $('#BekleyenIsEmirleriMakineMobil').html('');
                 $('#BekleyenIsEmirleriMakine').hide();
                 $('#BekleyenIsEmirleriTablo').hide();
-                $('#BekleyenIsEmirleriMakineMobil').hide();
                 $('.iefiltre').hide();
 
-                if ($(window).width() < 800) {
-                    $('#UretimeGirenlerMakineMobil').show();
-                    $('#UretimeGirenlerMakine').hide();
-                }
-                else {
-                    $('#UretimeGirenlerMakineMobil').hide();
-                    $('#UretimeGirenlerMakine').show();
-                }
+                UretimListeYedek = [];
+
+                $('#UretimeGirenlerMakine').show();
+
                 if (html5QrcodeScanner != null) {
                     html5QrcodeScanner.clear();
                 }
@@ -1448,7 +1438,8 @@
 
                 for (let i = 0; i < data.length; i++) {
                     var b = document.createElement("button");
-                    b.className = "mak btn btn-outline-secondary me-4";
+                    b.className = "mak btn btn-outline-secondary";
+                    b.style.width = "295px";
                     b.setAttribute("data-stokkodu", data[i].STOK_KODU);
                     b.setAttribute("data-genislik", data[i].BANT_GENISLIGI);
                     b.setAttribute("data-top", data[i].TOPLAM_MIKTAR);
