--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -387,7 +387,7 @@
                                 data-locale="tr-TR">
                             <thead>
                                 <tr>
-                                    <th data-formatter="oranFormatter4" data-field="ORAN" data-halign="center" data-align="center">ORAN</th>
+                                    <th data-formatter="oranFormatter4" data-field="ORAN" data-halign="center" data-align="center">GİRDİLER</th>
                                 </tr>
                             </thead>
                         </table>
