--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -2953,7 +2953,7 @@
                 //var Genislik = parseInt(item.getElementsByTagName('input')[1].value);
                 //var Adet = parseInt(item.getElementsByTagName('input')[2].value);
                 var Adet2 = parseInt(item.getElementsByTagName('input')[1].value);
-                var Agirlik = parseInt(item.getElementsByTagName('input')[3].value);
+                var Agirlik = parseFloat(item.getElementsByTagName('input')[3].value);
                 var Girdi1 = $("#seri").val();
                 var Kalinlik = $("#kalinlik").val();
                 var Kalite = $("#kalite").val();
